--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+  
     <header>
     <div class="logo">
       <img src="ASSETS/LOGO MENOR.png" alt="Logo">
@@ -36,7 +37,8 @@
       </ul>
     </nav>
   </header>
-    <main>
+    <main  data-aos="fade-up" data-aos-delay="200">
+      
         <div class="logo-main">
             <img src="ASSETS/logo maior.png" alt="">
         </div>
@@ -44,7 +46,7 @@
         <button class="btn openModal">Agendar Horário</button>
         <h6>Horário de Funcionamento 09:00 ás 18:00</h6>
     </main>
-    <section-1>
+    <section-1  data-aos="fade-up" data-aos-delay="200">
       <img id="img-section-1" src="ASSETS/img-section1.png" alt="">
       <div class="sobre">
         <h2>Sobre</h2>
@@ -62,7 +64,7 @@
       <img id="barra-2" src="ASSETS/barra-horizontal-2.png" alt="">
     </section-faixa>
 
-    <section-servicos>
+    <section-servicos  data-aos="fade-up" data-aos-delay="200">
       <h2>Serviços</h2>
 
       <div class="servicos">
@@ -118,7 +120,7 @@
 
     </section-servicos>
 
-    <section-equipe>
+    <section-equipe  data-aos="fade-up" data-aos-delay="200">
       <h2>Nossa Equipe</h2>
 
 <div class="equipe">
@@ -175,7 +177,7 @@
 
     </section-equipe>
 
-    <section-depo>
+    <section-depo  data-aos="fade-up" data-aos-delay="200">
       <h3>O Que Dizem Sobre a The Boss Barbearia</h3>
       <div class="depoimentos">
         <div class="depo-1">
@@ -226,7 +228,7 @@
       </div>
     </section-depo>
 
-    <section-unidades>
+    <section-unidades  data-aos="fade-up" data-aos-delay="200">
       <h3>Nossas Unidades</h3>
       <div class="unidades">
         <div class="unidade-1">
@@ -250,7 +252,7 @@
   _
 
 </div>
-    <footer>
+    <footer  data-aos="fade-up" data-aos-delay="200">
       <ul>
         <li>Home</li>
         <li>Sobre Nós</li>
