--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <img src="ASSETS/depo-1.png" alt="">
             <h4>Bruno Braga</h4>  
           </div>
-        <div class="depo">Equipe qualificada, atendimento otimo, preço acessivel.</div>
+        <div class="depo">"Não é só cortar cabelo e fazer a barba. Eles oferecem uma experiência completa: música boa, produtos de qualidade e profissionais que realmente entendem do assunto. Recomendo para qualquer homem que valorize estilo e cuidado."</div>
         <div class="star">
           <img src="ASSETS/star.png" alt="">
         </div>
@@ -196,7 +196,7 @@
             <img src="ASSETS/depo-2.png" alt="">
             <h4>Gabriel Ferreira</h4>  
           </div>
-        <div class="depo">Equipe qualificada, atendimento otimo, preço acessivel.</div>
+        <div class="depo">"Frequento a barbearia há alguns meses e posso dizer que é outro nível de atendimento. Desde o café de boas-vindas até o corte impecável, tudo é feito com muito cuidado. Saio sempre satisfeito e confiante."</div>
         <div class="star">
           <img src="ASSETS/star.png" alt="">
         </div>
@@ -207,7 +207,7 @@
             <img src="ASSETS/depo-3.png" alt="">
             <h4>Felipe Moraes</h4>  
           </div>
-        <div class="depo">Equipe qualificada, atendimento otimo, preço acessivel.</div>
+        <div class="depo">"Sempre tive dificuldade em encontrar alguém que entendesse o corte que eu queria. Aqui, os barbeiros escutam de verdade e entregam exatamente o que peço. Além disso, o ambiente é super confortável."</div>
         <div class="star">
           <img src="ASSETS/star.png" alt="">
         </div>
@@ -219,7 +219,7 @@
             <h4>Thales Andrade</h4>  
           </div>
       
-        <div class="depo">Equipe qualificada, atendimento otimo, preço acessivel.</div>
+        <div class="depo">"A barbearia é aquele espaço onde me sinto à vontade para relaxar, conversar e ainda sair com o visual renovado. O clima é descontraído e masculino, perfeito para quem busca mais do que apenas um corte de cabelo."</div>
         <div class="star">
           <img src="ASSETS/star.png" alt="">
         </div>
