--- a/index.html
+++ b/index.html
@@ -16,27 +16,24 @@
 <body>
   
     <header>
-    <div class="logo">
-      <img src="ASSETS/LOGO MENOR.png" alt="Logo">
-    </div>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><svg xmlns="http://www.w3.org/2000/svg" width="2" height="28" viewBox="0 0 2 34" fill="none">
-  <path d="M0.805115 0L0.805114 33.6289" stroke="white"/>
-</svg></li>
-        <li><a href="#">Sobre</a></li>
-        <li><svg xmlns="http://www.w3.org/2000/svg" width="2" height="28" viewBox="0 0 2 34" fill="none">
-  <path d="M0.805115 0L0.805114 33.6289" stroke="white"/>
-</svg></li>
-        <li><a href="#">Serviços</a></li>
-        <li><svg xmlns="http://www.w3.org/2000/svg" width="2" height="28" viewBox="0 0 2 34" fill="none">
-  <path d="M0.805115 0L0.805114 33.6289" stroke="white"/>
-</svg></li>
-        <li><a href="#">Localização</a></li>
-      </ul>
-    </nav>
-  </header>
+  <div class="logo">
+    <img src="ASSETS/LOGO MENOR.png" alt="Logo">
+  </div>
+
+  <!-- Botão hamburguer -->
+  <div class="menu-toggle" id="menu-toggle">
+    ☰
+  </div>
+
+  <nav id="nav">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Sobre</a></li>
+      <li><a href="#">Serviços</a></li>
+      <li><a href="#">Localização</a></li>
+    </ul>
+  </nav>
+</header>
     <main  data-aos="fade-up" data-aos-delay="200">
       
         <div class="logo-main">
@@ -179,47 +176,47 @@
 
     <section-depo  data-aos="fade-up" data-aos-delay="200">
       <h3>O Que Dizem Sobre a The Boss Barbearia</h3>
-      <div class="depoimentos">
-        <div class="depo-1">
+      <div class="scroll-container" id="carousel">
+        <div class="depo">
           <div class="foto-nome">
             <img src="ASSETS/depo-1.png" alt="">
             <h4>Bruno Braga</h4>  
           </div>
-        <div class="depo">"Não é só cortar cabelo e fazer a barba. Eles oferecem uma experiência completa: música boa, produtos de qualidade e profissionais que realmente entendem do assunto. Recomendo para qualquer homem que valorize estilo e cuidado."</div>
+        <div class="depoimento">"Não é só cortar cabelo e fazer a barba. Eles oferecem uma experiência completa: música boa, produtos de qualidade e profissionais que realmente entendem do assunto. Recomendo para qualquer homem que valorize estilo e cuidado."</div>
         <div class="star">
           <img src="ASSETS/star.png" alt="">
         </div>
         </div>
 
-        <div class="depo-2">
+        <div class="depo">
           <div class="foto-nome">
             <img src="ASSETS/depo-2.png" alt="">
             <h4>Gabriel Ferreira</h4>  
           </div>
-        <div class="depo">"Frequento a barbearia há alguns meses e posso dizer que é outro nível de atendimento. Desde o café de boas-vindas até o corte impecável, tudo é feito com muito cuidado. Saio sempre satisfeito e confiante."</div>
+        <div class="depoimento">"Frequento a barbearia há alguns meses e posso dizer que é outro nível de atendimento. Desde o café de boas-vindas até o corte impecável, tudo é feito com muito cuidado. Saio sempre satisfeito e confiante."</div>
         <div class="star">
           <img src="ASSETS/star.png" alt="">
         </div>
         </div>
 
-        <div class="depo-3">
+        <div class="depo">
           <div class="foto-nome">
             <img src="ASSETS/depo-3.png" alt="">
             <h4>Felipe Moraes</h4>  
           </div>
-        <div class="depo">"Sempre tive dificuldade em encontrar alguém que entendesse o corte que eu queria. Aqui, os barbeiros escutam de verdade e entregam exatamente o que peço. Além disso, o ambiente é super confortável."</div>
+        <div class="depoimento">"Sempre tive dificuldade em encontrar alguém que entendesse o corte que eu queria. Aqui, os barbeiros escutam de verdade e entregam exatamente o que peço. Além disso, o ambiente é super confortável."</div>
         <div class="star">
           <img src="ASSETS/star.png" alt="">
         </div>
         </div>
 
-        <div class="depo-4">
+        <div class="depo">
           <div class="foto-nome">
             <img src="ASSETS/depo-4.png" alt="">
             <h4>Thales Andrade</h4>  
           </div>
       
-        <div class="depo">"A barbearia é aquele espaço onde me sinto à vontade para relaxar, conversar e ainda sair com o visual renovado. O clima é descontraído e masculino, perfeito para quem busca mais do que apenas um corte de cabelo."</div>
+        <div class="depoimento">"A barbearia é aquele espaço onde me sinto à vontade para relaxar, conversar e ainda sair com o visual renovado. O clima é descontraído e masculino, perfeito para quem busca mais do que apenas um corte de cabelo."</div>
         <div class="star">
           <img src="ASSETS/star.png" alt="">
         </div>
@@ -356,5 +353,7 @@
 
 
   <script src="STYLES/modal.js"></script>
+  <script src="/STYLES/menu,js"></script>
+  <script src="/STYLES/scroll.js"></script>
 </body>
 </html>
